# youtube-clip

./: .gitignore  README.md  pyproject.toml
src/: app.py  core.py
tests/: test_app.py  test_core.py
